ops/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hyshauthservice
  labels:
    app: productpage
    service: productpage
spec:
  selector:
    app: hyshauthservice
  ports:
  - port: 4070

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  ports:
  - protocol: TCP
    port: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: opentracing-service
spec:
  selector:
    app: opentracing
  ports:
  - protocol: TCP
    port: 5775
