ops/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hysh-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: a14ec209f0dd64c56bbdd6a223cf35a6-2137114308.us-west-2.elb.amazonaws.com
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: hyshauthservice
            port:
              number: 4070
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: hyshauthservice
            port:
              number: 4070
  # tls:
  # - hosts:
  #   - api.handymesh.com
  #   secretName: tls-2048-kibana
